--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,9 @@
         <jest_version>5.3.3</jest_version>
         <es_version>5.4.0</es_version>
         <slf4j_version>1.7.25</slf4j_version>
+        <validation_version>1.1.0.Final</validation_version>
+        <hibernate_validator>5.3.5.Final</hibernate_validator>
+        <javax-el_version>3.0.0</javax-el_version>
     </properties>
 
 
@@ -102,6 +105,40 @@
             <groupId>org.slf4j</groupId>
             <artifactId>jcl-over-slf4j</artifactId>
             <version>${slf4j_version}</version>
+        </dependency>
+
+        <!-- javax validation -->
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>${validation_version}</version>
+        </dependency>
+
+        <!-- hibernate-validator -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>${hibernate_validator}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.el</artifactId>
+            <version>${javax-el_version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- test dependencies -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>${spring_version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>commons-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                </exclusion>
+            </exclusions>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
