--- a/pom.xml
+++ b/pom.xml
@@ -174,11 +174,11 @@
     <distributionManagement>
         <repository>
             <id>releases</id>
-            <url>http://192.168.17.252:8081/nexus/content/repositories/releases</url>
+            <url>http://maven.weidai.work/nexus/content/repositories/releases</url>
         </repository>
         <snapshotRepository>
             <id>snapshots</id>
-            <url>http://192.168.17.252:8081/nexus/content/repositories/snapshots</url>
+            <url>http://maven.weidai.work/nexus/content/repositories/snapshots</url>
         </snapshotRepository>
     </distributionManagement>
 </project>
